--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,7 +1,9 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: "import-demo-app1"
+  name: "import-demo-app"
+  annotations:
+    github.com/project-slug: himanshu-dev-hub-training-organization/import-demo1 # <organization_name>/<project_name>
 spec:
   type: service
   lifecycle: development
